old slurm/slurm-5192.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
In file included from include/f/cuda_pattern/cuda_pattern.hpp:5:
include/f/cuda_pattern/cuda_pattern_config.hpp:28:272: error: no member named 'per_tilt_dim' in 'f::cuda_pattern_config'
        cuda_pattern_config( cuda_pattern_config const& config ) : device_id( config.device_id ), thickness( config.thickness ), max_dim( config.max_dim ), tilt_size( config.tilt_size ), ug_size( config.ug_size ), column_index( config.column_index ), per_tilt_dim(config.per_tilt_dim)
                                                                                                                                                                                                                                                                        ~~~~~~ ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
/var/spool/slurmd/job05192/slurm_script: line 16: 99504 Illegal instruction     (core dumped) ./direct_cuda_pattern

real	0m0.086s
user	0m0.000s
sys	0m0.000s
